[gd_scene load_steps=15 format=3 uid="uid://cmfoj2rk31524"]

[ext_resource type="Script" uid="uid://pc3x07iwjhue" path="res://scripts/niveau.gd" id="1_liqxx"]
[ext_resource type="Texture2D" uid="uid://d4nqkn777sftg" path="res://assets/images/tileBlack_02.png" id="2_t08gu"]
[ext_resource type="Script" uid="uid://b6rgbwkdvyc6w" path="res://scripts/joueur.gd" id="3_sp565"]
[ext_resource type="Texture2D" uid="uid://c7sdph1t32ou" path="res://assets/images/paddle_03.png" id="4_u5unb"]
[ext_resource type="PackedScene" uid="uid://cal0etqr8corn" path="res://scenes/bloc.tscn" id="5_elpb3"]
[ext_resource type="Script" uid="uid://dj15kceqbslba" path="res://scripts/boule.gd" id="6_1p5go"]
[ext_resource type="Texture2D" uid="uid://dxliscuyy001w" path="res://assets/images/ballGrey_06.png" id="7_1pgka"]
[ext_resource type="AudioStream" uid="uid://dxikde32ids8r" path="res://assets/sons/lowRandom.ogg" id="8_352t0"]
[ext_resource type="AudioStream" uid="uid://0pai6co42oim" path="res://assets/sons/pepSound1.ogg" id="9_umgbm"]
[ext_resource type="AudioStream" uid="uid://d1cnqgbk85l6w" path="res://assets/sons/jingles_NES15.ogg" id="10_72ycl"]
[ext_resource type="PackedScene" uid="uid://ddcf6tfxayaux" path="res://scenes/zone_defaite.tscn" id="11_1an5a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yvv1t"]
size = Vector2(1516, 92)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yvv1t"]
radius = 13.5
height = 123.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i0u5r"]
radius = 12.4499

[node name="Niveau" type="Node2D" node_paths=PackedStringArray("zone_defaite")]
script = ExtResource("1_liqxx")
zone_defaite = NodePath("ZoneDefaite")

[node name="Murs" type="Node2D" parent="."]

[node name="Node2D3" type="Node2D" parent="Murs"]
position = Vector2(-24, 0)
scale = Vector2(0.5, 0.5)

[node name="TileBlack02" type="Sprite2D" parent="Murs/Node2D3"]
position = Vector2(99, 52)
scale = Vector2(1.00673, 1.00381)
texture = ExtResource("2_t08gu")

[node name="TileBlack03" type="Sprite2D" parent="Murs/Node2D3"]
position = Vector2(291, 52)
scale = Vector2(1.00673, 1.00381)
texture = ExtResource("2_t08gu")

[node name="TileBlack04" type="Sprite2D" parent="Murs/Node2D3"]
position = Vector2(482, 52)
scale = Vector2(1.00673, 1.00381)
texture = ExtResource("2_t08gu")

[node name="TileBlack05" type="Sprite2D" parent="Murs/Node2D3"]
position = Vector2(674, 52)
scale = Vector2(1.00673, 1.00381)
texture = ExtResource("2_t08gu")

[node name="TileBlack06" type="Sprite2D" parent="Murs/Node2D3"]
position = Vector2(866, 52)
scale = Vector2(1.00673, 1.00381)
texture = ExtResource("2_t08gu")

[node name="TileBlack07" type="Sprite2D" parent="Murs/Node2D3"]
position = Vector2(1058, 52)
scale = Vector2(1.00673, 1.00381)
texture = ExtResource("2_t08gu")

[node name="TileBlack08" type="Sprite2D" parent="Murs/Node2D3"]
position = Vector2(1249, 52)
scale = Vector2(1.00673, 1.00381)
texture = ExtResource("2_t08gu")

[node name="TileBlack09" type="Sprite2D" parent="Murs/Node2D3"]
position = Vector2(1441, 52)
scale = Vector2(1.00673, 1.00381)
texture = ExtResource("2_t08gu")

[node name="StaticBody2D" type="StaticBody2D" parent="Murs/Node2D3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Murs/Node2D3/StaticBody2D"]
position = Vector2(770, 44)
shape = SubResource("RectangleShape2D_yvv1t")

[node name="Node2D" type="Node2D" parent="Murs"]
position = Vector2(22, 48)
rotation = 1.5708
scale = Vector2(0.5, 0.5)

[node name="TileBlack10" type="Sprite2D" parent="Murs/Node2D"]
position = Vector2(99, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack11" type="Sprite2D" parent="Murs/Node2D"]
position = Vector2(291, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack12" type="Sprite2D" parent="Murs/Node2D"]
position = Vector2(482, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack13" type="Sprite2D" parent="Murs/Node2D"]
position = Vector2(674, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack14" type="Sprite2D" parent="Murs/Node2D"]
position = Vector2(866, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack15" type="Sprite2D" parent="Murs/Node2D"]
position = Vector2(1058, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack16" type="Sprite2D" parent="Murs/Node2D"]
position = Vector2(1249, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack17" type="Sprite2D" parent="Murs/Node2D"]
position = Vector2(1441, 0)
texture = ExtResource("2_t08gu")

[node name="StaticBody2D" type="StaticBody2D" parent="Murs/Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Murs/Node2D/StaticBody2D"]
position = Vector2(758, 7.99726)
shape = SubResource("RectangleShape2D_yvv1t")

[node name="Node2D2" type="Node2D" parent="Murs"]
position = Vector2(697, 48)
rotation = 1.5708
scale = Vector2(0.5, 0.5)

[node name="TileBlack10" type="Sprite2D" parent="Murs/Node2D2"]
position = Vector2(99, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack11" type="Sprite2D" parent="Murs/Node2D2"]
position = Vector2(291, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack12" type="Sprite2D" parent="Murs/Node2D2"]
position = Vector2(482, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack13" type="Sprite2D" parent="Murs/Node2D2"]
position = Vector2(674, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack14" type="Sprite2D" parent="Murs/Node2D2"]
position = Vector2(866, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack15" type="Sprite2D" parent="Murs/Node2D2"]
position = Vector2(1058, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack16" type="Sprite2D" parent="Murs/Node2D2"]
position = Vector2(1249, 0)
texture = ExtResource("2_t08gu")

[node name="TileBlack17" type="Sprite2D" parent="Murs/Node2D2"]
position = Vector2(1441, 0)
texture = ExtResource("2_t08gu")

[node name="StaticBody2D" type="StaticBody2D" parent="Murs/Node2D2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Murs/Node2D2/StaticBody2D"]
position = Vector2(758, -6.00268)
shape = SubResource("RectangleShape2D_yvv1t")

[node name="BarreJoueur" type="CharacterBody2D" parent="."]
position = Vector2(340, 414)
motion_mode = 1
floor_stop_on_slope = false
script = ExtResource("3_sp565")

[node name="Paddle03" type="Sprite2D" parent="BarreJoueur"]
position = Vector2(0, -2)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_u5unb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarreJoueur"]
position = Vector2(-0.5, -3.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_yvv1t")

[node name="Bloc" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(144, 203)

[node name="Bloc2" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(144, 156)

[node name="Bloc3" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(144, 114)

[node name="Bloc4" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(225, 203)

[node name="Bloc5" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(225, 156)

[node name="Bloc6" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(225, 114)

[node name="Bloc7" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(307, 203)

[node name="Bloc8" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(307, 156)

[node name="Bloc9" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(307, 114)

[node name="Bloc10" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(388, 203)

[node name="Bloc11" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(388, 156)

[node name="Bloc12" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(388, 114)

[node name="Bloc13" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(469, 203)

[node name="Bloc14" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(469, 156)

[node name="Bloc15" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(469, 114)

[node name="Bloc16" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(550, 203)

[node name="Bloc17" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(550, 156)

[node name="Bloc18" parent="." instance=ExtResource("5_elpb3")]
position = Vector2(550, 114)

[node name="Boule" type="CharacterBody2D" parent="."]
position = Vector2(362, 384)
motion_mode = 1
script = ExtResource("6_1p5go")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boule"]
shape = SubResource("CircleShape2D_i0u5r")

[node name="BallGrey06" type="Sprite2D" parent="Boule"]
scale = Vector2(0.175676, 0.175676)
texture = ExtResource("7_1pgka")

[node name="SfxBlocDetruit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_352t0")
volume_db = -8.0

[node name="SfxBouleTouchee" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_umgbm")
volume_db = -8.0

[node name="SfxGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_72ycl")
volume_db = -8.0

[node name="ZoneDefaite" parent="." instance=ExtResource("11_1an5a")]
position = Vector2(74, 510)

[connection signal="bloc_detruit" from="Boule" to="." method="bloc_detruit"]
[connection signal="boule_touchee" from="Boule" to="." method="boule_touchee"]
